--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "houphp-framework",
+    "name": "Houphp-Framework",
     "description": "厚匠框架 houphp",
     "keywords": [
         "framework",
