--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
             "email": "amos@houjit.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=7.1.0"
     },
