--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,8 @@
     "license": "MIT",
 	"authors": [
 		{
-			"name": "shenzhe",
-			"email": "shenzhe163@gmail.com"
-		},
-		{
-			"name": "cooper",
-			"email": "myxiaoao@gmail.com"
+			"name": "amos",
+			"email": "amos@houjit.com"
 		}
 	],
 	"require": {
